--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,10 +1,6 @@
 :root {
   --max-width: 1100px;
   --border-radius: 14px;
-  --font-mono: ui-monospace, Menlo, Monaco, "Cascadia Mono", "Segoe UI Mono",
-    "Roboto Mono", "Oxygen Mono", "Ubuntu Monospace", "Source Code Pro",
-    "Fira Mono", "Droid Sans Mono", "Courier New", monospace;
-
   --col-base: #fff;
   --col-text: #000;
   --col-background: #8fcbff;
@@ -15,6 +11,8 @@
   box-sizing: border-box;
   padding: 0;
   margin: 0;
+  font-family: -apple-system, "BlinkMacSystemFont", "Hiragino Sans", Meiryo,
+    sans-serif;
 }
 
 html,
